--- a/src/components/EmailCTA.astro
+++ b/src/components/EmailCTA.astro
@@ -12,7 +12,7 @@
 
     <a
       href="/enrollment"
-      class="btn-dark-blue hover:bg-white hover:text-dark-blue"
+      class="btn-primary-600 hover:bg-white hover:text-primary-600"
     >
       Schedule a visit
     </a>
@@ -33,7 +33,7 @@
       />
       <button
         type="submit"
-        class="btn-dark-blue px-8 absolute right-[1px] py-4 top-[1px]"
+        class="btn-primary-600 px-8 absolute right-[1px] py-4 top-[1px]"
       >
         Subscribe
       </button>
