--- a/src/components/HomepageHeader2.astro
+++ b/src/components/HomepageHeader2.astro
@@ -14,18 +14,22 @@ import HeroImage from "/src/assets/alto-pilot-thumbs-up-oklahoma.jpg";
     quality={100}
   />
 
-  <div class="absolute inset-0 bg-dark-blue/30 -z-40"></div>
+  <div class="absolute inset-0 bg-primary-600/30 -z-40"></div>
   <div class="flex w-full max-w-7xl mx-auto px-5">
     <div class="flex flex-col gap-4 lg:gap-8">
       <h1 class="text-5xl max-w-xl lg:text-7xl font-extrabold lg:max-w-max">
         Professional <span class="text-red-500 font-strong">Pilot</span> Training
       </h1>
-      <h2 class="text-3xl max-w-xl lg:text-5xl font-extrabold lg:max-w-4xl text-gray-200">
+      <h2
+        class="text-3xl max-w-xl lg:text-5xl font-extrabold lg:max-w-4xl text-gray-200"
+      >
         <span class="text-red-500 font-strong">Flight School</span> in Oklahoma City
       </h2>
-      <a href="/intro-flight" target="_blank" class="btn-red uppercase font-light tracking-wider"
-        >Begin Today</a
+      <a
+        href="/intro-flight"
+        target="_blank"
+        class="btn-red uppercase font-light tracking-wider">Begin Today</a
       >
-  </div>
+    </div>
   </div>
 </header>
