--- a/src/components/BlogPostCard.astro
+++ b/src/components/BlogPostCard.astro
@@ -5,11 +5,11 @@ import FormattedDate from "./FormattedDate.astro";
 
 const { imagePath, title, date, blogUrl, description } = Astro.props;
 const images = import.meta.glob<{ default: ImageMetadata }>(
-  "/src/assets/*.{jpeg,jpg,png,gif}",
+  "/src/assets/*.{jpeg,jpg,png,gif}"
 );
 if (!images[imagePath]) {
   throw new Error(
-    `"${imagePath}" does not exist in glob: "src/assets/*.{jpeg,jpg,png,gif}"`,
+    `"${imagePath}" does not exist in glob: "src/assets/*.{jpeg,jpg,png,gif}"`
   );
 }
 
@@ -33,7 +33,7 @@ const dateData = new Date(date);
       >
         <FormattedDate date={dateData} />
       </p>
-      <h3 class="text-2xl font-semibold leading-tight text-dark-blue">
+      <h3 class="text-2xl font-semibold leading-tight text-primary-600">
         {title}
       </h3>
       <p class="paragraph line-clamp-3">{description}</p>
