--- a/src/components/CourseCard.astro
+++ b/src/components/CourseCard.astro
@@ -4,7 +4,7 @@ const { course } = Astro.props;
 
 <div>
   <div
-    class="bg-white p-16 text-dark-blue flex flex-col gap-3 h-full justify-between"
+    class="bg-white p-16 text-primary-600 flex flex-col gap-3 h-full justify-between"
   >
     <div class="flex flex-col gap-3">
       <h1 class="font-bold text-3xl">{course.name}</h1>
@@ -14,7 +14,7 @@ const { course } = Astro.props;
     <div class="flex self-end">
       <a
         href={course.link}
-        class="font-bold text-red-700 hover:text-dark-blue duration-200"
+        class="font-bold text-red-700 hover:text-primary-600 duration-200"
         >Read More</a
       >
     </div>
