--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,6 @@
 ---
 const today = new Date();
-import { FaPhone } from "react-icons/fa";
+import { FaPhoneSquareAlt } from "react-icons/fa";
 import { IoLocationSharp } from "react-icons/io5";
 import { MdEmail } from "react-icons/md";
 import {
@@ -10,209 +10,214 @@ import {
   ADDRESS_LINE_2,
   FACEBOOK_URL,
   INSTAGRAM_URL,
-  TIKTOK_URL,
-  AIRPORT,
+  LINKEDIN_URL,
+  TWITTER_URL,
+  YOUTUBE_URL,
   SITE_DESCRIPTION,
+  LOCATIONS,
 } from "../consts";
-import { navbarLinks } from "../data/navbarLinks";
+import { footerLinks } from "../data/footerLinks";
+import logo from "../assets/sun-city-white-text-logo.webp";
+import { Image } from "astro:assets";
+
 const { pathname } = Astro.url;
 ---
 
-<footer class=`bg-dark-blue pt-24 px-5`>
-  <div class="text-white max-w-xl lg:max-w-7xl mx-auto">
-    <div class="flex gap-10 flex-col lg:flex-row">
-      <div class="flex flex-col gap-5 lg:w-1/3">
-        <a href="/" class="text-4xl font-bold uppercase"
-          ><h2><span class="text-blue-700">XYZ</span> Flight School</h2></a
+<footer class="relative bg-gradient-to-br from-primary-900 font-sans2 to-black">
+  <div
+    class="px-4 pt-24 pb-16 lg:pb-2 md:pt-12 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8"
+  >
+    <div class="grid gap-16 row-gap-10 mb-8 lg:grid-cols-6">
+      <div class="lg:col-span-2">
+        <a
+          href="/"
+          aria-label="Go home"
+          title="Company"
+          class="flex justify-center items-center w-full"
         >
-        <p class="text-gray-400 font-medium max-w-xl">
-          {SITE_DESCRIPTION}
-        </p>
-        <div class="flex space-x-6">
-          <a
-            href={FACEBOOK_URL}
-            target="_blank"
-            class="text-gray-400 hover:text-blue-700 duration-200"
+          <Image
+            src={logo}
+            alt="Right Rudder Marketing Logo"
+            class="object-contain h-36 w-auto px-5 lg:px-0 drop-shadow-lg"
+          />
+        </a>
+        <div class="mt-2 lg:max-w-sm">
+          <p
+            class="text-sm text-white px-3 lg:px-0 text-center lg:text-justify"
           >
-            <span class="sr-only">Facebook</span>
-            <svg
-              class="h-6 w-6"
-              fill="currentColor"
-              viewBox="0 0 24 24"
-              aria-hidden="true"
-            >
-              <path
-                fill-rule="evenodd"
-                d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z"
-                clip-rule="evenodd"></path>
-            </svg>
-          </a>
-          <a
-            href={INSTAGRAM_URL}
-            target="_blank"
-            class="text-gray-400 hover:text-blue-700 duration-200"
+            {SITE_DESCRIPTION}
+          </p>
+          <div
+            class="flex justify-center lg:justify-start align-middle items-center w-full"
           >
-            <span class="sr-only">Instagram</span>
-            <svg
-              class="h-6 w-6"
-              fill="currentColor"
-              viewBox="0 0 24 24"
-              aria-hidden="true"
-            >
-              <path
-                fill-rule="evenodd"
-                d="M12.315 2c2.43 0 2.784.013 3.808.06 1.064.049 1.791.218 2.427.465a4.902 4.902 0 011.772 1.153 4.902 4.902 0 011.153 1.772c.247.636.416 1.363.465 2.427.048 1.067.06 1.407.06 4.123v.08c0 2.643-.012 2.987-.06 4.043-.049 1.064-.218 1.791-.465 2.427a4.902 4.902 0 01-1.153 1.772 4.902 4.902 0 01-1.772 1.153c-.636.247-1.363.416-2.427.465-1.067.048-1.407.06-4.123.06h-.08c-2.643 0-2.987-.012-4.043-.06-1.064-.049-1.791-.218-2.427-.465a4.902 4.902 0 01-1.772-1.153 4.902 4.902 0 01-1.153-1.772c-.247-.636-.416-1.363-.465-2.427-.047-1.024-.06-1.379-.06-3.808v-.63c0-2.43.013-2.784.06-3.808.049-1.064.218-1.791.465-2.427a4.902 4.902 0 011.153-1.772A4.902 4.902 0 015.45 2.525c.636-.247 1.363-.416 2.427-.465C8.901 2.013 9.256 2 11.685 2h.63zm-.081 1.802h-.468c-2.456 0-2.784.011-3.807.058-.975.045-1.504.207-1.857.344-.467.182-.8.398-1.15.748-.35.35-.566.683-.748 1.15-.137.353-.3.882-.344 1.857-.047 1.023-.058 1.351-.058 3.807v.468c0 2.456.011 2.784.058 3.807.045.975.207 1.504.344 1.857.182.466.399.8.748 1.15.35.35.683.566 1.15.748.353.137.882.3 1.857.344 1.054.048 1.37.058 4.041.058h.08c2.597 0 2.917-.01 3.96-.058.976-.045 1.505-.207 1.858-.344.466-.182.8-.398 1.15-.748.35-.35.566-.683.748-1.15.137-.353.3-.882.344-1.857.048-1.055.058-1.37.058-4.041v-.08c0-2.597-.01-2.917-.058-3.96-.045-.976-.207-1.505-.344-1.858a3.097 3.097 0 00-.748-1.15 3.098 3.098 0 00-1.15-.748c-.353-.137-.882-.3-1.857-.344-1.023-.047-1.351-.058-3.807-.058zM12 6.865a5.135 5.135 0 110 10.27 5.135 5.135 0 010-10.27zm0 1.802a3.333 3.333 0 100 6.666 3.333 3.333 0 000-6.666zm5.338-3.205a1.2 1.2 0 110 2.4 1.2 1.2 0 010-2.4z"
-                clip-rule="evenodd"></path>
-            </svg>
-          </a>
-          <a
-            href={TIKTOK_URL}
-            target="_blank"
-            class="text-gray-400 hover:text-blue-700 duration-200"
-          >
-            <span class="sr-only">YouTube</span>
-            <svg
-              class="size-6"
-              fill="currentColor"
-              viewBox="0 0 512 512"
-              id="icons"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M412.19,118.66a109.27,109.27,0,0,1-9.45-5.5,132.87,132.87,0,0,1-24.27-20.62c-18.1-20.71-24.86-41.72-27.35-56.43h.1C349.14,23.9,350,16,350.13,16H267.69V334.78c0,4.28,0,8.51-.18,12.69,0,.52-.05,1-.08,1.56,0,.23,0,.47-.05.71,0,.06,0,.12,0,.18a70,70,0,0,1-35.22,55.56,68.8,68.8,0,0,1-34.11,9c-38.41,0-69.54-31.32-69.54-70s31.13-70,69.54-70a68.9,68.9,0,0,1,21.41,3.39l.1-83.94a153.14,153.14,0,0,0-118,34.52,161.79,161.79,0,0,0-35.3,43.53c-3.48,6-16.61,30.11-18.2,69.24-1,22.21,5.67,45.22,8.85,54.73v.2c2,5.6,9.75,24.71,22.38,40.82A167.53,167.53,0,0,0,115,470.66v-.2l.2.2C155.11,497.78,199.36,496,199.36,496c7.66-.31,33.32,0,62.46-13.81,32.32-15.31,50.72-38.12,50.72-38.12a158.46,158.46,0,0,0,27.64-45.93c7.46-19.61,9.95-43.13,9.95-52.53V176.49c1,.6,14.32,9.41,14.32,9.41s19.19,12.3,49.13,20.31c21.48,5.7,50.42,6.9,50.42,6.9V131.27C453.86,132.37,433.27,129.17,412.19,118.66Z"
-              ></path>
-            </svg>
-          </a>
+            <a
+              href="/privacy-policy"
+              class="mt-3 mr-4 transition-colors duration-300 text-sm text-white hover:text-accent-100"
+              >Privacy Policy
+            </a>
+            <span class="text-accent-200 text-sm pt-3"> &#x2022; </span>
+            <a
+              href="/terms-of-service"
+              class="mt-3 ml-4 transition-colors duration-300 text-sm text-white hover:text-accent-100"
+              >Terms of Service
+            </a>
+          </div>
         </div>
       </div>
-
-      <div class="flex flex-col gap-3">
-        <h3 class="font-semibold pb-5">Quick Links</h3>
-        <ul class="flex flex-col gap-2 text-gray-400">
-          <li>
-            <a
-              href="/why-become-a-pilot"
-              class="hover:text-blue-700 duration-200 font-medium"
+      <div class="grid grid-cols-2 mt-8 gap-9 lg:col-span-4 lg:grid-cols-9">
+        {
+          footerLinks.map((column, index) => (
+            <div
+              class={`${index % 2 === 0 ? "text-left" : "text-right lg:text-left"} lg:col-span-2`}
             >
-              New To Flying?
-            </a>
-          </li>
-          <li>
-            <a
-              href="/intro-flight"
-              class="hover:text-blue-700 duration-200 font-medium"
-            >
-              Another Link Somewhere
-            </a>
-          </li>
-          <li>
-            <a
-              href="/ground-school/private-pilot"
-              class="hover:text-blue-700 duration-200 font-medium"
-            >
-              More link to somewhere
-            </a>
-          </li>
-          <li>
-            <a
-              href="/about/learning-center"
-              class="hover:text-blue-700 duration-200 font-medium"
-            >
-              Learning Center
-            </a>
-          </li>
-        </ul>
-      </div>
-      <div class="flex flex-col gap-3">
-        <h3 class="font-semibold pb-5">More Links</h3>
-        <ul class="flex flex-col gap-2 text-gray-400">
-          <li>
-            <a
-              href="/about/our-story"
-              class="hover:text-blue-700 duration-200 font-medium"
-            >
-              About Us
-            </a>
-          </li>
-          <li>
-            <a
-              href="/about/our-team"
-              class="hover:text-blue-700 duration-200 font-medium"
-            >
-              Our Team
-            </a>
-          </li>
-          <li>
-            <a
-              href="/about/our-fleet"
-              class="hover:text-blue-700 duration-200 font-medium"
-            >
-              Our Fleet
-            </a>
-          </li>
-          <li>
-            <a
-              href="/contact"
-              class="hover:text-blue-700 duration-200 font-medium"
-            >
-              Contact Us
-            </a>
-          </li>
-        </ul>
-      </div>
-      <div class="flex flex-col gap-3">
-        <h3 class="font-semibold pb-5">Contact</h3>
-        <ul class="flex flex-col gap-1 text-gray-400 font-medium">
-          <li class="flex gap-2 group items-center">
-            <MdEmail className="size-4 group-hover:text-blue-700 duration-200" />
-            <a
-              class="group-hover:text-blue-700 duration-200"
-              href=`mailto:${EMAIL_ADDRESS}`>{EMAIL_ADDRESS}</a
-            >
-          </li>
-          <li class="flex gap-2 group items-center">
-            <FaPhone className="size-4 group-hover:text-blue-700 duration-200" />
-            <a
-              class="group-hover:text-blue-700 duration-200"
-              href=`tel:${PHONE_NUMBER}`>{PHONE_NUMBER}</a
-            >
-          </li>
-          <li class="flex gap-2 group">
-            <IoLocationSharp
-              className="size-4 group-hover:text-blue-700 duration-200 mt-1"
-            />
-            <a
-              class="group-hover:text-blue-700 duration-200"
-              href="https://maps.app.goo.gl/jV2NSfU3mHNMf2Rc7"
-              target="_blank"
-            >
-              <p>{AIRPORT}</p>
-              <p>{ADDRESS_LINE_1}</p>
-              <p>{ADDRESS_LINE_2}</p>
-            </a>
-          </li>
-        </ul>
+              <p class="font-bold text-xl font-sans lg:text-md tracking-wide text-accent-200">
+                {column.title}
+              </p>
+              <ul class="mt-2 space-y-2 text-lg lg:text-sm">
+                {column.links.map((link) => (
+                  <li>
+                    <a
+                      href={link.link}
+                      class="transition-colors duration-300 text-white hover:text-accent-100"
+                    >
+                      {link.name}
+                    </a>
+                  </li>
+                ))}
+              </ul>
+            </div>
+          ))
+        }
+        <div class="grid grid-cols-1 gap-y-4 lg:col-span-3">
+          {
+            LOCATIONS.map((location, index) => (
+              <div class="text-right lg:text-center bg-white/20 rounded pt-6 text-lg">
+                <p
+                  class="font-bold tracking-wide text-accent-200 leading-none"
+                  set:html={location.title}
+                />
+                <a
+                  href={location.gMaps}
+                  target="_blank"
+                  class="mt-2 space-y-1 transition-colors duration-300 text-white hover:text-accent-100"
+                >
+                  <>
+                    <span class="text-sm">{location.address}</span>
+                    <br />
+                    <span class="text-sm">
+                      {location.city}, {location.state} {location.zip}
+                    </span>
+                  </>
+                </a>
+                <a
+                  href={`tel:${location.phone}`}
+                  class="mt-3 text-right justify-end lg:justify-center lg:text-center transition-colors duration-300 text-white hover:text-accent-100 flex items-center align-middle"
+                >
+                  <FaPhoneSquareAlt className="mr-2 text-lg" />
+                  {location.phone}
+                </a>
+              </div>
+            ))
+          }
+        </div>
       </div>
     </div>
+  </div>
+  <div class="pt-5 pb-10 border-t border-accent">
     <div
-      class="flex flex-col sm:flex-row justify-between border-t border-gray-600 py-5 mt-10 gap-2"
+      class="mx-auto flex flex-col gap-2 lg:flex-row justify-between items-center align-middle max-w-7xl"
     >
-      <p>
-        <span class="font-semibold">XYZ FLIGHT SCHOOL</span> &copy; {
-          today.getFullYear()
-        }. All rights reserved. <a
-          class="hover:underline"
-          href="/privacy-policy">Privacy Policy</a
-        >
+      <p class="text-sm text-gray-100 text-center">
+        © Copyright 2024 Right Rudder Marketing LLC. All rights reserved.
       </p>
-      <p class="text-xs text-gray-400">
-        Powered by <a
-          href="https://rightruddermarketing.com/"
+      <div
+        class="flex items-center justify-center align-middle mt-4 space-x-4 sm:mt-0"
+      >
+        <a
+          href={LINKEDIN_URL}
           target="_blank"
-          class="font-semibold hover:text-blue-700 duration-200"
-          >More Right Rudder</a
+          aria-label="LinkedIn"
+          title="LinkedIn"
+          class="transition-colors duration-300 text-white hover:text-white/70 hover:scale-105"
         >
-      </p>
+          <svg viewBox="0 0 16 16" fill="currentColor" class="h-8 lg:h-5">
+            <path
+              d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"
+            ></path>
+          </svg>
+        </a>
+        <a
+          href={INSTAGRAM_URL}
+          target="_blank"
+          aria-label="Instagram"
+          title="Instagram"
+          class="transition-colors duration-300 text-white hover:text-white/70 hover:scale-105"
+        >
+          <svg viewBox="0 0 30 30" fill="currentColor" class="h-10 lg:h-6">
+            <circle cx="15" cy="15" r="4"></circle>
+            <path
+              d="M19.999,3h-10C6.14,3,3,6.141,3,10.001v10C3,23.86,6.141,27,10.001,27h10C23.86,27,27,23.859,27,19.999v-10   C27,6.14,23.859,3,19.999,3z M15,21c-3.309,0-6-2.691-6-6s2.691-6,6-6s6,2.691,6,6S18.309,21,15,21z M22,9c-0.552,0-1-0.448-1-1   c0-0.552,0.448-1,1-1s1,0.448,1,1C23,8.552,22.552,9,22,9z"
+            ></path>
+          </svg>
+        </a>
+        <a
+          href={FACEBOOK_URL}
+          target="_blank"
+          aria-label="Facebook"
+          title="Facebook"
+          class="transition-colors duration-300 text-white hover:text-white/70 hover:scale-105"
+        >
+          <svg viewBox="0 0 24 24" fill="currentColor" class="h-8 lg:h-5">
+            <path
+              d="M22,0H2C0.895,0,0,0.895,0,2v20c0,1.105,0.895,2,2,2h11v-9h-3v-4h3V8.413c0-3.1,1.893-4.788,4.659-4.788 c1.325,0,2.463,0.099,2.795,0.143v3.24l-1.918,0.001c-1.504,0-1.795,0.715-1.795,1.763V11h4.44l-1,4h-3.44v9H22c1.105,0,2-0.895,2-2 V2C24,0.895,23.105,0,22,0z"
+            ></path>
+          </svg>
+        </a>
+        <a
+          href={TWITTER_URL}
+          target="_blank"
+          aria-label="X"
+          title="X"
+          class="transition-colors duration-300 text-white hover:text-white/70 hover:scale-105"
+        >
+          <svg
+            class="size-7 -m-1 p-0"
+            xmlns="http://www.w3.org/2000/svg"
+            x="0px"
+            y="0px"
+            width="100"
+            height="100"
+            viewBox="0 0 24 24"
+            fill="currentColor"
+          >
+            <path
+              d="M10.053,7.988l5.631,8.024h-1.497L8.566,7.988H10.053z M21,6v12	c0,1.657-1.343,3-3,3H6c-1.657,0-3-1.343-3-3V6c0-1.657,1.343-3,3-3h12C19.657,3,21,4.343,21,6z M17.538,17l-4.186-5.99L16.774,7	h-1.311l-2.704,3.16L10.552,7H6.702l3.941,5.633L6.906,17h1.333l3.001-3.516L13.698,17H17.538z"
+            ></path>
+          </svg>
+        </a>
+        <a
+          href={YOUTUBE_URL}
+          target="_blank"
+          aria-label="Youtube"
+          title="Youtube"
+          class="transition-colors duration-300 text-white hover:text-white/70 hover:scale-105"
+        >
+          <svg
+            class="size-7"
+            xmlns="http://www.w3.org/2000/svg"
+            x="0px"
+            y="0px"
+            width="100"
+            height="100"
+            viewBox="0 0 24 24"
+            fill="currentColor"
+          >
+            <path
+              d="M21.582,6.186c-0.23-0.86-0.908-1.538-1.768-1.768C18.254,4,12,4,12,4S5.746,4,4.186,4.418 c-0.86,0.23-1.538,0.908-1.768,1.768C2,7.746,2,12,2,12s0,4.254,0.418,5.814c0.23,0.86,0.908,1.538,1.768,1.768 C5.746,20,12,20,12,20s6.254,0,7.814-0.418c0.861-0.23,1.538-0.908,1.768-1.768C22,16.254,22,12,22,12S22,7.746,21.582,6.186z M10,15.464V8.536L16,12L10,15.464z"
+            ></path>
+          </svg>
+        </a>
+      </div>
     </div>
   </div>
 </footer>
