--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,11 +3,11 @@ import { Image } from "astro:assets";
 import type { ImageMetadata } from "astro";
 const { data } = Astro.props;
 const images = import.meta.glob<{ default: ImageMetadata }>(
-  "/src/assets/*.{jpeg,jpg,png,gif,webp}",
+  "/src/assets/*.{jpeg,jpg,png,gif,webp}"
 );
 if (!images[data.headerImage]) {
   throw new Error(
-    `"${data.headerImage}" does not exist in glob: "src/assets/*.{jpeg,jpg,png,gif,webp}"`,
+    `"${data.headerImage}" does not exist in glob: "src/assets/*.{jpeg,jpg,png,gif,webp}"`
   );
 }
 ---
@@ -23,7 +23,7 @@ if (!images[data.headerImage]) {
     quality={100}
   />
 
-  <div class="absolute inset-0 bg-dark-blue/30 -z-40"></div>
+  <div class="absolute inset-0 bg-primary-600/30 -z-40"></div>
   <div
     class="flex w-full max-w-7xl mx-auto px-5 font-medium flex-col gap-4 lg:gap-8"
   >
