--- a/src/components/HomepageHeader.astro
+++ b/src/components/HomepageHeader.astro
@@ -14,17 +14,19 @@ import HeroImage from "/src/assets/N67797-cessna-flying-over-sundance-airport.jp
     quality={100}
   />
 
-  <div class="absolute inset-0 bg-dark-blue/60 -z-40"></div>
+  <div class="absolute inset-0 bg-primary-600/60 -z-40"></div>
   <div
     class="flex w-full max-w-7xl mx-auto px-5 font-medium flex-col gap-4 lg:gap-8"
   >
     <h1 class="text-5xl max-w-xl lg:text-8xl font-extrabold lg:max-w-4xl">
       Learn to fly
     </h1>
-    <h2 class="text-3xl max-w-xl lg:text-6xl font-extrabold lg:max-w-4xl text-gray-200">
+    <h2
+      class="text-3xl max-w-xl lg:text-6xl font-extrabold lg:max-w-4xl text-gray-200"
+    >
       Become a pilot
     </h2>
-    <a href="/intro-flight" target="_blank" class="btn-dark-blue"
+    <a href="/intro-flight" target="_blank" class="btn-primary-600"
       >How to Enroll</a
     >
   </div>
