--- a/src/components/PlaneCard.astro
+++ b/src/components/PlaneCard.astro
@@ -4,18 +4,18 @@ import type { ImageMetadata } from "astro";
 import { Image } from "astro:assets";
 import { FaCheck } from "react-icons/fa";
 const images = import.meta.glob<{ default: ImageMetadata }>(
-  "/src/assets/*.{jpeg,jpg,png,gif}",
+  "/src/assets/*.{jpeg,jpg,png,gif}"
 );
 if (!images[imagePath]) {
   throw new Error(
-    `"${imagePath}" does not exist in glob: "src/assets/*.{jpeg,jpg,png,gif}"`,
+    `"${imagePath}" does not exist in glob: "src/assets/*.{jpeg,jpg,png,gif}"`
   );
 }
 ---
 
 <div class="flex flex-col">
   <div
-    class="flex justify-between items-center px-8 py-12 bg-dark-blue text-white text-2xl font-bold"
+    class="flex justify-between items-center px-8 py-12 bg-primary-600 text-white text-2xl font-bold"
   >
     <h2>{name}</h2>
     <p>{price}</p>
@@ -30,7 +30,7 @@ if (!images[imagePath]) {
       />
     </div>
     <div
-      class="flex-1 text-dark-blue flex flex-col max-h-[28rem] justify-between"
+      class="flex-1 text-primary-600 flex flex-col max-h-[28rem] justify-between"
     >
       <div>
         <h3 class="text-xl font-bold">Equipment</h3>
@@ -47,7 +47,7 @@ if (!images[imagePath]) {
           }
         </ul>
       </div>
-      <a href="/enrollment" class="btn-dark-blue mt-5 block">Fly Now</a>
+      <a href="/enrollment" class="btn-primary-600 mt-5 block">Fly Now</a>
     </div>
   </div>
 </div>
