--- a/src/components/TeamMemberCard.astro
+++ b/src/components/TeamMemberCard.astro
@@ -3,11 +3,11 @@ const { name, qualifications, imagePath, bio } = Astro.props;
 import type { ImageMetadata } from "astro";
 import { Image } from "astro:assets";
 const images = import.meta.glob<{ default: ImageMetadata }>(
-  "/src/assets/*.{jpeg,jpg,png,gif}",
+  "/src/assets/*.{jpeg,jpg,png,gif}"
 );
 if (!images[imagePath])
   throw new Error(
-    `"${imagePath}" does not exist in glob: "src/assets/*.{jpeg,jpg,png,gif}"`,
+    `"${imagePath}" does not exist in glob: "src/assets/*.{jpeg,jpg,png,gif}"`
   );
 ---
 
@@ -21,13 +21,13 @@ if (!images[imagePath])
     />
   </div>
   <div
-    class="absolute w-full h-full bg-dark-blue/80 backdrop-blur-sm -translate-x-[101%] group-hover:translate-x-0 duration-700"
+    class="absolute w-full h-full bg-primary-600/80 backdrop-blur-sm -translate-x-[101%] group-hover:translate-x-0 duration-700"
   >
     <p class="p-10 leading-loose text-white">{bio}</p>
   </div>
   <div class="p-10 z-10">
     <h2
-      class="text-dark-blue text-3xl font-medium mb-3 group-hover:text-white duration-700"
+      class="text-primary-600 text-3xl font-medium mb-3 group-hover:text-white duration-700"
     >
       {name}
     </h2>
