--- a/src/components/ThirtyYears.astro
+++ b/src/components/ThirtyYears.astro
@@ -5,7 +5,7 @@ import ThirtyYearsText from "../components/ThirtyYearsText.jsx";
 ---
 
 <section
-  class="mb-0 py-12 lg:py-24 sm:py-10 bg-gradient-to-tl from-dark-blue to-sky-950 text-white relative max-w-[80rem] mx-auto lg:mb-20"
+  class="mb-0 py-12 lg:py-24 sm:py-10 bg-gradient-to-tl from-primary-600 to-sky-950 text-white relative max-w-[80rem] mx-auto lg:mb-20"
 >
   <div class="grid place-items-center">
     <div class="flex flex-col items-center">
