--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,12 +2,14 @@
 import BaseHead from "../components/BaseHead.astro";
 import Footer from "../components/Footer.astro";
 import { SITE_TITLE, SITE_DESCRIPTION, KEYWORDS } from "../consts";
-import "@fontsource-variable/raleway";
-import '@fontsource/poppins';
+import "@fontsource-variable/montserrat";
+import "@fontsource/merriweather";
+import "@fontsource-variable/quicksand";
 import Navbar from "../components/Navbar";
 const { pathname } = Astro.url;
 const { siteTitle, siteDescription, keywords } = Astro.props;
 import ChatWidget from "../components/ChatWidget.astro";
+import Banner from "../components/Banner.astro";
 ---
 
 <!doctype html>
@@ -19,13 +21,13 @@ import ChatWidget from "../components/ChatWidget.astro";
       keywords={keywords || KEYWORDS}
     />
   </head>
-  <body>
+  <body class="font-sans">
+    <Banner />
     <Navbar pathname={pathname} client:load />
     <main>
       <slot />
     </main>
     <Footer />
-    <ChatWidget />
+    <!-- <ChatWidget /> -->
   </body>
 </html>
- 
