--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,40 +1,29 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-import homePage from "../data/homePage"
+import homePage from "../data/homePage";
 import { Image } from "astro:assets";
 import type { ImageMetadata } from "astro";
+import HeaderScreen from "../components/HeaderScreen.astro";
 const { data } = homePage;
 const images = import.meta.glob<{ default: ImageMetadata }>(
-  "/src/assets/*.{jpeg,jpg,png,gif,webp}",
+  "/src/assets/*.{jpeg,jpg,png,gif,webp}"
 );
 ---
 
-<BaseLayout 
-  siteTitle={data.pageTitle} 
-  siteDescription={data.pageDescription} 
+<BaseLayout
+  siteTitle={data.pageTitle}
+  siteDescription={data.pageDescription}
   keywords={data.pageKeywords}
 >
- 
-<!-- HEADER -->
-<div class="h-[90vh] bg-gray-800 text-white flex flex-col items-center justify-center">
-  <!-- <Image 
-    src={images[data.headerImagePath]()}
-    alt={data.headerImageAlt}
-    class=""
-  /> -->
-  
-  <h1 class="text-3xl font-bold">{data.headerH1}</h1>
-  <h2 class="text-xl font-bold">{data.headerH2}</h2>
-</div>
+  <!-- HEADER -->
+  <HeaderScreen content={data.header} />
 
-
-<!-- Content 1 -->
- <div class="">
-<!-- <Image 
+  <!-- Content 1 -->
+  <div class="font-sans2">
+    <!-- <Image 
     src={data.contentOneImage}
     alt={data.contentOneAlt}
     class=""
   />  -->
-</div>
-
+  </div>
 </BaseLayout>
