--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,8 @@ import homePage from "../data/homePage";
 import { Image } from "astro:assets";
 import type { ImageMetadata } from "astro";
 import HeaderScreen from "../components/HeaderScreen.astro";
+import ImageComp from "../components/ImageComp.astro";
+import ProgramSwiper from "../components/ProgramSwiper.astro";
 const { data } = homePage;
 const images = import.meta.glob<{ default: ImageMetadata }>(
   "/src/assets/*.{jpeg,jpg,png,gif,webp}"
@@ -18,12 +20,27 @@ const images = import.meta.glob<{ default: ImageMetadata }>(
   <!-- HEADER -->
   <HeaderScreen content={data.header} />
 
-  <!-- Content 1 -->
-  <div class="font-sans2">
-    <!-- <Image 
-    src={data.contentOneImage}
-    alt={data.contentOneAlt}
-    class=""
-  />  -->
-  </div>
+  <section id="best-of-pembroke-pines" class="bg-black p-12">
+    <a
+      href="https://issuu.com/ourcityweston/docs/bopin_2024"
+      target="_blank"
+      class="flex flex-col items-center group"
+    >
+      <ImageComp
+        imagePath="/src/assets/best-of-pembroke-pines-flight-school-is-sun-city-aviation-academy.webp"
+        imageAlt="Best of Pembroke Pines Flight School is Sun City Aviation Academy"
+        styles="w-44 h-auto group-hover:scale-110 duration-300 ease-out"
+      />
+      <h3
+        class="text-muted-300 text-center mt-6 font-light text-lg tracking-wide"
+      >
+        Voted <strong class="text-accent-300 uppercase"
+          >BEST Flight School</strong
+        > in Pembroke Pines 2024
+      </h3>
+    </a>
+  </section>
+
+  <ProgramSwiper content={data.programs} />
 </BaseLayout>
+<script src="../scripts/creativeSwiper.js"></script>
