--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,7 +12,7 @@
   }
 
   .btn-animate {
-    @apply hover:before:bg-primary-600 relative overflow-hidden px-3 text-white transition-all before:absolute before:bottom-0 before:left-0 before:top-0 before:z-0 before:h-full before:w-0 before:bg-black before:transition-all before:duration-300 hover:before:left-0 hover:before:w-full ease-in-out;
+    @apply hover:before:bg-black/30 relative overflow-hidden px-3 text-white transition-all before:absolute before:bottom-0 before:left-0 before:top-0 before:z-0 before:h-full before:w-0 before:bg-black before:transition-all before:duration-300 hover:before:left-0 hover:before:w-full ease-in-out;
   }
   .btn-white {
     @apply text-center uppercase font-bold py-3 px-6 ring-1 ring-white w-fit bg-white/10 hover:bg-primary-900/30 hover:ring-white/50 hover:text-white text-primary-50 rounded-sm duration-300;
@@ -28,6 +28,10 @@
 
   .has-tooltip:hover .tooltip {
     @apply visible opacity-95 transition-all duration-300 cursor-help;
+  }
+
+  .swiper-button-next, .swiper-button-prev {
+    @apply bg-gray-100 opacity-20 hover:opacity-70 duration-300 ease-in-out px-8 py-9;
   }
 }
 
