New: Privacy, ToS pages

--- a/src/pages/terms-of-service.astro
+++ b/src/pages/terms-of-service.astro
@@ -1,13 +1,13 @@
 ---
-import privacyPolicies from "../data/privacy-policy";
+import terms from "../data/terms-of-service";
 import BaseLayout from "../layouts/BaseLayout.astro";
 
-const { data } = privacyPolicies;
+const { data } = terms;
 ---
 
 <BaseLayout
-  siteTitle="Privacy Policy | Sun City Aviation Academy"
-  siteDescription="Privacy Policy of Sun City Aviation Academy"
+  siteTitle="Terms of Service | Sun City Aviation Academy"
+  siteDescription="Terms of Service of Sun City Aviation Academy"
 >
   <div class="h-20 lg:h-28 w-full bg-primary-700/50 brightness-75"></div>
 
