--- a/src/components/ProgramCard.astro
+++ b/src/components/ProgramCard.astro
@@ -49,11 +49,11 @@ if (!images[imagePath])
   <a
     href={link}
     target="_self"
-    class="absolute btn-animate bottom-0 w-full h-16 bg-accent-600 lg:opacity-50 lg:translate-y-[101%] group-hover:brightness-125 group-hover:opacity-100 group-hover:translate-y-0 duration-300"
+    class="absolute btn-animate bottom-0 w-full h-16 bg-accent-400 lg:opacity-50 lg:translate-y-[101%] group-hover:brightness-125 group-hover:opacity-100 group-hover:translate-y-0 duration-300 text-primary-950 hover:text-primary-50"
   >
     <div class="flex h-full w-full justify-center align-middle items-center">
       <p
-        class="relative z-10 text-center text-lg tracking-wide font-bold leading-loose text-white uppercase drop-shadow-sm"
+        class="relative block z-10 text-center text-lg tracking-wide font-bold leading-loose uppercase drop-shadow-sm"
       >
         {linkText}
       </p>
