--- a/src/components/ContentSplit.astro
+++ b/src/components/ContentSplit.astro
@@ -4,7 +4,7 @@ import ImageComp from "./ImageComp.astro";
 const { content } = Astro.props;
 ---
 
-<section class="grid grid-cols-1 lg:grid-cols-2 py-12 h-full bg-muted-50">
+<section class="grid grid-cols-1 lg:grid-cols-2 lg:py-12 h-full bg-white">
   <div class="px-4 lg:px-12 py-6 lg:py-0">
     {
       content.upperHeading && (
@@ -34,7 +34,7 @@ const { content } = Astro.props;
         <div class="mt-6 flex justify-center align-middle items-center">
           <ul
             role="list"
-            class="space-y-5 text-gray-600 mx-3 bg-gray-100 ring-1 ring-gray-300 py-9 px-6 rounded-lg"
+            class="space-y-5 text-gray-600 mx-0 lg:mx-3 bg-gray-100 ring-1 ring-gray-300 py-9 px-6 rounded-lg"
           >
             {content.bullets.map((bullet) => (
               <li class="flex gap-x-3 text-accent-400">
@@ -68,7 +68,7 @@ const { content } = Astro.props;
     }
   </div>
   <div
-    class="group relative aspect-square lg:aspect-auto bg-black overflow-hidden rounded-lg"
+    class="group relative aspect-square lg:aspect-auto bg-black overflow-hidden lg:rounded-lg order-first lg:order-last"
   >
     <ImageComp
       imagePath={content.imagePath}
@@ -78,7 +78,7 @@ const { content } = Astro.props;
     />
     {
       content.imagePath && (
-        <div class="absolute bottom-0 py-6 translate-y-full w-full group-hover:translate-y-0 bg-black/50 backdrop-blur-md duration-300 ease-in-out">
+        <div class="absolute bottom-0 py-6 lg:translate-y-full w-full group-hover:translate-y-0 bg-black/50 backdrop-blur-md duration-300 ease-in-out">
           <p
             class="text-center font-bold leading-none text-xl text-accent-300 py-2"
             set:html={content.imageLegend}
