--- a/src/components/Testimonials.astro
+++ b/src/components/Testimonials.astro
@@ -10,7 +10,7 @@ const { content } = Astro.props;
       >
         {
           content.upperHeading && (
-            <p class="text-lg font-sans text-center lg:text-right font-bold tracking-tight text-accent-400">
+            <p class="text-xl font-sans text-center uppercase lg:text-right font-bold tracking-tight text-accent-300">
               {content.upperHeading}
             </p>
           )
