Update: styles, add components

--- a/src/components/ProgramCard.astro
+++ b/src/components/ProgramCard.astro
@@ -42,7 +42,7 @@ if (!images[imagePath])
       quality={60}
     />
     <div
-      class="absolute z-0 w-full h-full bg-black/70 lg:bg-muted-900/50 group-hover:bg-black/80 duration-500"
+      class="absolute z-0 w-full h-full bg-black/70 lg:bg-black/40 group-hover:bg-black/80 duration-500"
     >
     </div>
   </div>
