--- a/src/components/Content.astro
+++ b/src/components/Content.astro
@@ -41,12 +41,12 @@ if (!images[data.imagePath])
       </div>
     </div>
     <div
-      class="-ml-12 -mt-12 p-12 lg:h-screen lg:sticky lg:top-8 lg:col-start-2 lg:row-span-2 lg:row-start-1 lg:overflow-hidden"
+      class="lg:-ml-12 lg:-mt-12 col-span-1 lg:max-w-2xl aspect-square md:aspect-auto rounded-md lg:h-screen lg:sticky lg:top-8 lg:col-start-2 lg:row-span-2 lg:row-start-1 overflow-hidden"
     >
       <Image
         src={images[data.imagePath]()}
         alt={data.imageAlt}
-        class="w-[48rem] max-w-2xl object-cover h-full max-h-screen rounded-md bg-gray-900 shadow-xl ring-1 ring-gray-400/10 sm:w-[57rem]"
+        class="w-full object-cover h-full lg:min-h-screen"
         quality={100}
       />
     </div>
@@ -54,7 +54,9 @@ if (!images[data.imagePath])
       class="lg:col-span-2 lg:col-start-1 lg:row-start-2 lg:mx-auto lg:grid lg:w-full lg:max-w-7xl lg:grid-cols-2 lg:gap-x-8 lg:px-8"
     >
       <div class="lg:pr-4">
-        <div class="max-w-xl text-base leading-7 text-gray-700 lg:max-w-lg">
+        <div
+          class="max-w-2xl text-base leading-relaxed text-gray-700 lg:max-w-lg"
+        >
           <div>
             {
               data.paragraphs.map((paragraph) => (
@@ -101,7 +103,7 @@ if (!images[data.imagePath])
           }
           {
             data.afterListParagraphs && (
-              <div class="mt-8 text-muted-800">
+              <div class="mt-8 text-muted-800 font-medium">
                 {data.afterListParagraphs.map((paragraph) => (
                   <p class="mt-2" set:html={paragraph} />
                 ))}
