--- a/src/components/PageSummary.astro
+++ b/src/components/PageSummary.astro
@@ -4,20 +4,19 @@ const { content } = Astro.props;
 
 <section id={content.title} class="bg-primary-950 py-12 lg:py-24">
   <div class="flex items-center justify-center gap-9 md:gap-12 flex-wrap">
-    <div class="md:w-1/3">
+    <div class="lg:w-1/3">
       <h2
-        class="mt-2 text-4xl font-bold tracking-tight leading-tighter text-accent-300 md:text-5xl lg:text-6xl text-center md:text-right px-3 md:px-0"
-      >
-        {content.title}
-      </h2>
+        class="mt-2 text-4xl font-bold tracking-tight leading-tighter text-accent-300 md:text-5xl lg:text-6xl text-center lg:text-right px-3 md:px-0"
+        set:html={content.title}
+      />
     </div>
     <div
-      class="md:w-1/3 font-light text-base leading-tight text-white text-center"
+      class="lg:w-1/3 font-light text-base leading-tight text-white text-center lg:text-left"
     >
       {
         content.paragraphs &&
           content.paragraphs.map((paragraph) => (
-            <p class="mb-2 md:text-left px-9 lg:px-0" set:html={paragraph} />
+            <p class="mb-2 px-9 lg:px-0" set:html={paragraph} />
           ))
       }
     </div>
