--- a/src/components/HeaderScreen.astro
+++ b/src/components/HeaderScreen.astro
@@ -48,7 +48,7 @@ if (!images[content.imagePath]) {
             href={btn.link}
             class={`${btn.primary ? "btn-primary" : "btn-white"} w-full md:w-auto`}
           >
-            {btn.name}
+            <span class="drop-shadow-sm">{btn.name}</span>
           </a>
         ))
       }
