--- a/src/pages/professional-pilot-course.astro
+++ b/src/pages/professional-pilot-course.astro
@@ -7,6 +7,7 @@ import PageSummary from "../components/PageSummary.astro";
 import professionalPilotCourse from "../data/professional-pilot-course";
 import Zero2Hero from "../components/Zero2Hero";
 import BookCTA from "../components/BookCTA.astro";
+import programsSwiper from "../data/programSwiper";
 
 const { data } = professionalPilotCourse;
 ---
@@ -56,7 +57,7 @@ const { data } = professionalPilotCourse;
   </section>
 
   <BookCTA content={data.bookCTA} />
-  <ProgramSwiper content={data.programs} />
+  <ProgramSwiper content={programsSwiper} />
   <CTAColor content={data.flyWithUsCTA} />
   <script src="../scripts/creativeSwiper.js"></script>
 </BaseLayout>
