--- a/src/pages/airline-transport-pilot-atp.astro
+++ b/src/pages/airline-transport-pilot-atp.astro
@@ -7,6 +7,7 @@ import PageSummary from "../components/PageSummary.astro";
 import BookCTA from "../components/BookCTA.astro";
 import Content from "../components/Content.astro";
 import airlineTransportPilot from "../data/airline-transport-pilot-atp";
+import programsSwiper from "../data/programSwiper";
 
 const { data } = airlineTransportPilot;
 ---
@@ -21,7 +22,7 @@ const { data } = airlineTransportPilot;
   <PageSummary content={data.pageSummary} />
   <Content data={data.becomeCFI} />
   <BookCTA content={data.bookCTA} />
-  <ProgramSwiper content={data.programs} />
+  <ProgramSwiper content={programsSwiper} />
   <CTAColor content={data.flyWithUsCTA} />
   <script src="../scripts/creativeSwiper.js"></script>
 </BaseLayout>
