--- a/src/pages/commercial-pilot-training.astro
+++ b/src/pages/commercial-pilot-training.astro
@@ -7,6 +7,7 @@ import PageSummary from "../components/PageSummary.astro";
 import BookCTA from "../components/BookCTA.astro";
 import TrainingRoadmap from "../components/TrainingRoadmap.astro";
 import commercialPilotTraining from "../data/commercial-pilot-training";
+import programsSwiper from "../data/programSwiper";
 
 const { data } = commercialPilotTraining;
 ---
@@ -23,7 +24,7 @@ const { data } = commercialPilotTraining;
   <TrainingRoadmap content={data.commercialRoadmap} />
 
   <BookCTA content={data.bookCTA} />
-  <ProgramSwiper content={data.programs} />
+  <ProgramSwiper content={programsSwiper} />
   <CTAColor content={data.flyWithUsCTA} />
   <script src="../scripts/creativeSwiper.js"></script>
 </BaseLayout>
