--- a/src/pages/group-ground-school.astro
+++ b/src/pages/group-ground-school.astro
@@ -5,9 +5,9 @@ import ProgramSwiper from "../components/ProgramSwiper.astro";
 import CTAColor from "../components/CTAColor.astro";
 import PageSummary from "../components/PageSummary.astro";
 import BookCTA from "../components/BookCTA.astro";
-import TrainingRoadmap from "../components/TrainingRoadmap.astro";
 import groupGroundSchool from "../data/group-ground-school";
 import Content from "../components/Content.astro";
+import programsSwiper from "../data/programSwiper";
 
 const { data } = groupGroundSchool;
 ---
@@ -22,7 +22,7 @@ const { data } = groupGroundSchool;
   <PageSummary content={data.pageSummary} />
   <Content data={data.groupGroundContent} />
   <BookCTA content={data.bookCTA} />
-  <ProgramSwiper content={data.programs} />
+  <ProgramSwiper content={programsSwiper} />
   <CTAColor content={data.flyWithUsCTA} />
   <script src="../scripts/creativeSwiper.js"></script>
 </BaseLayout>
