--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,5 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-import homePage from "../data/homePage";
-import type { ImageMetadata } from "astro";
 import HeaderScreen from "../components/HeaderScreen.astro";
 import ImageComp from "../components/ImageComp.astro";
 import ProgramSwiper from "../components/ProgramSwiper.astro";
@@ -9,6 +7,8 @@ import ContentSplit from "../components/ContentSplit.astro";
 import CTAColor from "../components/CTAColor.astro";
 import Testimonials from "../components/Testimonials.astro";
 import ContentCTA from "../components/ContentCTA.astro";
+import homePage from "../data/homePage";
+import programsSwiper from "../data/programSwiper";
 
 const { data } = homePage;
 ---
@@ -42,7 +42,7 @@ const { data } = homePage;
     </a>
   </section>
 
-  <ProgramSwiper content={data.programs} />
+  <ProgramSwiper content={programsSwiper} />
   <ContentSplit content={data.whySuncity} />
   <ContentCTA content={data.quizCTA} />
   <Testimonials content={data.testimonials} />
