--- a/src/pages/instrument-rating.astro
+++ b/src/pages/instrument-rating.astro
@@ -7,6 +7,7 @@ import PageSummary from "../components/PageSummary.astro";
 import BookCTA from "../components/BookCTA.astro";
 import TrainingRoadmap from "../components/TrainingRoadmap.astro";
 import instrumentRating from "../data/instrument-rating";
+import programsSwiper from "../data/programSwiper";
 
 const { data } = instrumentRating;
 ---
@@ -23,7 +24,7 @@ const { data } = instrumentRating;
   <TrainingRoadmap content={data.instrumentRoadmap} />
 
   <BookCTA content={data.bookCTA} />
-  <ProgramSwiper content={data.programs} />
+  <ProgramSwiper content={programsSwiper} />
   <CTAColor content={data.flyWithUsCTA} />
   <script src="../scripts/creativeSwiper.js"></script>
 </BaseLayout>
