--- a/src/pages/multi-engine-rating.astro
+++ b/src/pages/multi-engine-rating.astro
@@ -5,9 +5,9 @@ import ProgramSwiper from "../components/ProgramSwiper.astro";
 import CTAColor from "../components/CTAColor.astro";
 import PageSummary from "../components/PageSummary.astro";
 import BookCTA from "../components/BookCTA.astro";
-import TrainingRoadmap from "../components/TrainingRoadmap.astro";
 import multiEngineRating from "../data/multi-engine-rating";
 import Content from "../components/Content.astro";
+import programsSwiper from "../data/programSwiper";
 
 const { data } = multiEngineRating;
 ---
@@ -22,7 +22,7 @@ const { data } = multiEngineRating;
   <PageSummary content={data.pageSummary} />
   <Content data={data.multiEngine} />
   <BookCTA content={data.bookCTA} />
-  <ProgramSwiper content={data.programs} />
+  <ProgramSwiper content={programsSwiper} />
   <CTAColor content={data.flyWithUsCTA} />
   <script src="../scripts/creativeSwiper.js"></script>
 </BaseLayout>
