New: blog articles - migration complete

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -33,7 +33,7 @@ const {
   >
     <article class="mx-auto max-w-4xl">
       <div
-        class="mb-12 lg:mb-0 aspect-square lg:rounded-t-md shadow-md overflow-hidden"
+        class="mb-12 lg:mb-0 aspect-square lg:aspect-video lg:rounded-t-md shadow-md overflow-hidden"
       >
         {
           heroImage && (
