--- a/src/components/BookCTA.astro
+++ b/src/components/BookCTA.astro
@@ -5,7 +5,7 @@ const { content } = Astro.props;
 ---
 
 <section
-  class="flex flex-wrap justify-center py-12 lg:py-20 items-center align-middle bg-white"
+  class="flex flex-wrap justify-center py-12 lg:py-20 items-center align-middle bg-gradient-to-br from-primary-50 to-white"
 >
   <div
     class="text-white w-full lg:w-1/2 text-center lg:text-left z-10 flex flex-col items-center lg:items-start gap-4 px-5 h-full justify-center"
