--- a/src/components/GoogleMaps.astro
+++ b/src/components/GoogleMaps.astro
@@ -1,7 +1,49 @@
 ---
 //USE APPLICABLE GMAP
+const { data } = Astro.props;
 ---
 
-<section class="">
-  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12976.232413131633!2d-97.7078798!3d35.6016333!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87b2014e29c352e9%3A0x466ca3f4081dcdf5!2sAlto%20Flight%20Academy!5e0!3m2!1sen!2sus!4v1717008608431!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+<section id={data.location} class="w-full">
+  <div
+    class="overflow-hidden bg-gradient-to-br from-accent-50 to-accent-100 py-4 sm:py-16 font-sans"
+  >
+    <div class="mx-auto max-w-7xl px-6 py-12 lg:py-0 lg:px-10">
+      <div
+        class="mx-auto grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 sm:gap-y-20 lg:mx-0 lg:max-w-none lg:grid-cols-2"
+      >
+        <div class="flex align-middle items-center">
+          <div
+            class="lg:max-w-lg flex justify-center flex-wrap text-white dark:text-gray-500"
+          >
+            <h2
+              class="text-3xl text-center text-accent-400 font-semibold leading-7 w-full"
+            >
+              Come Visit Us
+            </h2>
+            <p
+              class="mt-2 text-center lg:text-7xl font-bold tracking-tight text-primary-950 text-4xl w-full"
+            >
+              {data.location}
+            </p>
+            <p
+              class="mt-6 text-center text-lg leading-8 text-gray-900 w-full font-sans1"
+            >
+              {data.body}
+            </p>
+          </div>
+        </div>
+        <div class={data.inverted ? "lg:order-first" : ""}>
+          <iframe
+            src={data.gMapUrl}
+            class="w-full"
+            title="Google Maps"
+            height="450"
+            style="border:0;"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
