Update: styles, links

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -147,9 +147,9 @@ const { data } = contact;
         </div>
       </div>
       <div
-        class="bg-primary-500/20 w-full h-full flex justify-center align-middle items-center max-w-xl p-6 lg:p-12"
+        class="bg-primary-500/20 w-full h-full flex justify-center align-middle items-center p-6 lg:p-12"
       >
-        <form id="contact-form" class="w-full">
+        <form id="contact-form" class="w-full max-w-xl">
           <div class="">
             <div class="mb-4">
               <label for="first-name" class="block mb-0 font-semibold">
